# RangeQuery

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
compare/: CMakeLists.txt  compare.cpp  compare.ipynb
include/: node.hpp  range_query.hpp  range_query_tree.hpp  set_range_query.hpp  tree.hpp
src/: main.cpp  set.cpp  tree_gen.cpp
test/: CMakeLists.txt  tree_test.cpp  tree_test.hpp
